# kubics-console

./: CMakeLists.txt  README.md
assets/: README.md
assets/shaders/: fragment.glsl  vertex.glsl
dependencies/: CMakeLists.txt  README.md
dependencies/glm/: CMakeLists.txt
dependencies/opengl/glew/: CMakeLists.txt
dependencies/opengl/glew/mswindows/: CMakeLists.txt
dependencies/opengl/glfw/: CMakeLists.txt
include/: base.hpp  helper.hpp  kconsole.hpp  kconsole_buffer.hpp  kconsole_character.hpp  kconsole_font.hpp  kconsole_shader.hpp
source/: CMakeLists.txt  README.md
source/kconsole/: base.cpp  font_loading.cpp  helper.cpp  kconsole.cpp  kconsole_buffer.cpp  kconsole_character.cpp  kconsole_font.cpp  kconsole_shader.cpp  kconsole_utility.cpp
source/kconsole/headers/: base.hpp  font_loading.hpp  helper.hpp  kconsole.hpp  kconsole_buffer.hpp  kconsole_character.hpp  kconsole_font.hpp  kconsole_shader.hpp  kconsole_utility.hpp
test/: CMakeLists.txt  main.cpp
